# routers/init.go
@@ -1,16 +1,16 @@
 package routers
 
 import (
-	"github.com/zhwei820/appconfig/utils/sentry"
-	"github.com/zhwei820/appconfig/models"
+	"github.com/zhwei820/natsmicro/utils/sentry"
+	"github.com/zhwei820/natsmicro/models"
 	"github.com/astaxie/beego"
 	"github.com/astaxie/beego/plugins/cors"
-	"github.com/zhwei820/appconfig/utils/define"
+	"github.com/zhwei820/natsmicro/utils/define"
 	"github.com/satori/go.uuid"
 	"github.com/astaxie/beego/context"
-	"github.com/zhwei820/appconfig/utils"
+	"github.com/zhwei820/natsmicro/utils"
 	"strings"
-	"github.com/zhwei820/appconfig/utils/redisp"
+	"github.com/zhwei820/natsmicro/utils/redisp"
 	"github.com/gomodule/redigo/redis"
 	"github.com/rs/zerolog/log"
 )
