# swagger/swagger.yml
@@ -341,9 +341,9 @@ securityDefinitions:
     name: Authorization
     in: header
 tags:
-- name: github.com/zhwei820/appconfig/services/default_serviceDefaultController
+- name: github.com/zhwei820/natsmicro/services/default_serviceDefaultController
   description: |
     Operations about object
-- name: github.com/zhwei820/appconfig/services/default_serviceDefaultController
+- name: github.com/zhwei820/natsmicro/services/default_serviceDefaultController
   description: |
     Operations about object
